plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
    id 'org.beryx.jlink' version '2.24.4'
}

group 'com.gebb'
version '1.0'

sourceCompatibility = 1.15
java {
    modularity.inferModulePath = true
}
modularity.disableEffectiveArgumentsAdjustment()

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.8.1'
}

sourceCompatibility = '15'
targetCompatibility = '15'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainModule = 'com.gebb.wetell'
    mainClass = 'com.gebb.wetell.client.WeTellClient'
}

javafx {
    version = '15.0.1'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics']
}

jlink {
    imageZip = file("$buildDir/image-zip/tellthis.zip")
    options = ['--bind-services', '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']

    launcher {
        name = 'TellThis'
        noConsole = true
    }
    jpackage {
        /*commandLine = ["${java_home}/bin/jpackage", 'create-installer', "dmg",
        '--output', "${installer}", "--name", "${appName}",
        '--verbose', '--echo-mode', '--module-path', 'build/libs',
        '--add-modules', "${moduleName}", '--input', 'builds/libraries',
        '--class', "${mainClassName}", '--module', "${mainClassName}"]*/
    }
}

dependencies {

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation 'org.xerial:sqlite-jdbc:3.36.0.3'
}

test {
    useJUnitPlatform()
}